--- a/www/templates/catInventory.html
+++ b/www/templates/catInventory.html
@@ -1,10 +1,10 @@
 <ion-view style="" id="page2" title="Inventario">
+    <ion-nav-buttons side="secondary">
+      <button class="button button-icon icon ion-plus" ui-sref="tabsController.aAdirAlInventario"></button>
+    </ion-nav-buttons>
     <ion-content class="has-header" padding="true">
         <ion-list id="inventario-list1">
           <ion-item ng-repeat="cat in categorias" ng-click="goToInv(cat.id)">{{cat.nombre}}</ion-item>
         </ion-list>
-        <div style="margin-right:-20px;">
-          <a class="button button-balanced  button-full button-clear" style="left:-10px;" id="inventario-button1" ui-sref="tabsController.aAdirAlInventario">Nuevo Elemento</a>
-        </div>
     </ion-content>
 </ion-view>
