Add to particularInv

--- a/www/templates/catInventory.html
+++ b/www/templates/catInventory.html
@@ -1,6 +1,6 @@
 <ion-view style="" id="page2" title="Inventario">
     <ion-nav-buttons side="secondary">
-      <button class="button button-icon icon ion-plus" ui-sref="tabsController.aAdirAlInventario"></button>
+      <button class="button button-icon icon ion-ios-compose" ui-sref="tabsController.aAdirAlInventario"></button>
     </ion-nav-buttons>
     <ion-content class="has-header" padding="true">
         <ion-list id="inventario-list1">
