Categorias e Code agregable

--- a/www/templates/catInventory.html
+++ b/www/templates/catInventory.html
@@ -1,7 +1,7 @@
 <ion-view style="" id="page2" title="Inventario">
-    <ion-nav-buttons side="secondary">
+    <!--ion-nav-buttons side="secondary">
       <button class="button button-icon icon ion-ios-compose" ui-sref="tabsController.aAdirAlInventario"></button>
-    </ion-nav-buttons>
+    </ion-nav-buttons!-->
     <ion-content class="has-header" padding="true">
         <ion-list id="inventario-list1">
           <ion-item ng-repeat="cat in categorias" ng-click="goToInv(cat.id)">{{cat.nombre}}</ion-item>
