--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -1,9 +1,12 @@
 <ion-view style="" id="page1" title="Tabs Controller">
     <ion-tabs style="" id="tabsController-tabs1" class="tabs-stable tabs-icon-top">
-        <ion-tab id="tabsController-tab1" title="Inventario" icon="ion-filing" href="#/page1/inventory">
+        <ion-tab id="tabsController-tab1" title="Inventario" icon="ion-filing" href="#/AEA/inventory">
             <ion-nav-view name="tab1"></ion-nav-view>
         </ion-tab>
-        <ion-tab id="tabsController-tab2" title="Balances" icon="ion-ios-list" href="#/page1/balances">
+        <ion-tab id="tabsController-tab3" title="Entradas y Gastos" icon="ion-arrow-swap" href="#/AEA/economy">
+            <ion-nav-view name="tab3"></ion-nav-view>
+        </ion-tab>
+        <ion-tab id="tabsController-tab2" title="Balances" icon="ion-ios-list" href="#/AEA/balances">
             <ion-nav-view name="tab2"></ion-nav-view>
         </ion-tab>
     </ion-tabs>
