--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -6,7 +6,7 @@
         <ion-tab id="tabsController-tab3" title="Entradas y Gastos" icon="ion-arrow-swap" href="#/AEA/economy">
             <ion-nav-view name="tab2"></ion-nav-view>
         </ion-tab>
-        <ion-tab id="tabsController-tab2" title="Balances" icon="ion-ios-list" href="#/AEA/balances">
+        <ion-tab id="tabsController-tab2" title="Balances" icon="ion-ios-list" href="#/AEA/balances" hidden="true">
             <ion-nav-view name="tab3"></ion-nav-view>
         </ion-tab>
     </ion-tabs>
